sample-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-namespace
  labels:
    name: development
