gdbgui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gdbgui
  name: gdbgui-service
  namespace: sample-namespace
spec:
  selector:
    app: gdbgui
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 5555
  type: NodePort
