gdbgui-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdbgui-services
  namespace: sample-namespace
spec:
  type: NodePort
  selector:
    app: gdbgui-deployment
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 30000
      nodePort: 30000
