gdbgui-ingress.yaml
apiVersion: networking.k8s.io/v1  
kind: Ingress
metadata:
  name: gdbgui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gdbgui-services
                port:
                  number: 8080
